<?xml version="1.0"?>
<package>
  <name>hiwr_code_scanner</name>
  <version>1.0.0</version>
  <description>The hiwr_code_scanner package</description>

  <maintainer email="lucile.peuch@worldline.com">lpeuch</maintainer>


 <license>Apache V2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>hiwr_msg</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>hiwr_msg</run_depend>


  <export>
    <nodelet plugin="${prefix}/hiwr_code_scanner_nodelet.xml"/>
  </export>
</package>
